PR: MNG-1555 Custom velocity template error: unable to find resource 'maven.vm' in any class loader
TemplateDirectory parameter is now a file. 
Updated the howto file.
Added a project test case

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-site-plugin@353867 13f79535-47bb-0310-9956-ffa450edef68